rcapture() to e.g. capture relations in sentence.
rcapture() captures all relations in a captured span.

e.g. rcapture(<s/>, 's', 'rels') captures sentences and their relations. It relies on a capture 's' existing, which it will if your query contains <s/>. You can also explicitly name your capture, e.g. rcapture('the' within X:<s/>, 'X', 'rels').

Also:
- allow _ (don't care / default) to be used with relation operator.
- simplify CQL parser definition a little bit.